--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <strong>Privacy Policy</strong>
     <p>
-      AGRadiance with ACM Project Team built the Zulite Nwata app as a Free app.
+      AGRadiance with ACM (Diocese of Ogbaru) Project Team built the Zulite Nwata app as a Free app.
       This SERVICE is provided by Anglican Children Ministry Ogbaru Diocese at
       no cost and is intended for use as is.
     </p>
