--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <strong>Privacy Policy</strong>
     <p>
-      AGRadiance with ACM (Diocese of Ogbaru) Project Team built the Zulite Nwata app as a Free app.
+      AGRadiance with ACM Project Team built the Zulite Nwata app as a Free app.
       This SERVICE is provided by Anglican Children Ministry Ogbaru Diocese at
       no cost and is intended for use as is.
     </p>
@@ -58,6 +58,22 @@
             target="_blank"
             rel="noopener noreferrer"
             >Google Play Services</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://firebase.google.com/policies/analytics"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Google Analytics for Firebase</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://firebase.google.com/support/privacy/"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Firebase Crashlytics</a
           >
         </li>
         <!--         
@@ -126,7 +142,7 @@
       practices of any third-party sites or services.
     </p>
     <p><strong>Children’s Privacy</strong></p>
-    
+
     <!---->
     <p><strong>Changes to This Privacy Policy</strong></p>
     <p>
@@ -134,7 +150,7 @@
       to review this page periodically for any changes. We will notify you of
       any changes by posting the new Privacy Policy on this page.
     </p>
-    <p>This policy is effective as of 2022-08-23</p>
+    <p>This policy is effective as of 2021-12-01</p>
     <p><strong>Contact Us</strong></p>
     <p>
       If you have any questions or suggestions about our Privacy Policy, do not
@@ -143,8 +159,8 @@
         href="mailto://amazinggraceradiance@gmail.com"
         target="_blank"
         rel="noopener noreferrer"
-        >amazinggraceradiance@gmail.com </a
-      >
+        >amazinggraceradiance@gmail.com
+      </a>
     </p>
   </body>
 </html>
